@@ -1,7 +1,7 @@
 #!/usr/bin/perl -T
 
 use strict;
-use Getopt::Long qw(:config no_ignore_case);
+use Getopt::Long qw(:config no_auto_abbrev no_ignore_case_always);
 
 my $Common_Config;
 if (-f './common.pl') {$Common_Config = './common.pl';} else {$Common_Config = '../common.pl';}
